@@ -278,11 +278,15 @@ func InitConfig() {
 	} else {
 		fmt.Println("Using modernc.org/memory package to skip GC for UTXO records ")
 		utxo.Memory_Malloc = func(le int) (res []byte) {
+			MemMutex.Lock()
 			res, _ = Memory.Malloc(le)
+			MemMutex.Unlock()
 			return
 		}
 		utxo.Memory_Free = func(ptr []byte) {
+			MemMutex.Lock()
 			Memory.Free(ptr)
+			MemMutex.Unlock()
 		}
 	}
 
