@@ -13,6 +13,7 @@
 * Client/WebUI: SSL server binds to TCP port 14433 in testnet mode
 * Client: BlockDB can work with new "blNNNNNNNN.dat" filenames, as well as the old "blockchain-NNNNNNNN.dat"
 * Tools/bdb - new command "-rendat" to rename old "blockchain-NNNNNNNN.dat" to new "blNNNNNNNN.dat" 
+* Client: Added parallel updating of UTXO database by splitting it into 256 smaller hash-maps
 
 1.9.9 - 2021-05-21
  * Client: Do not drop Authorized peers
